[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
  "wheel",
]

[project]
name = "erddapy"
description = "Python interface for ERDDAP"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Filipe Fernandes", email = "ocefpaf+erddapy@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
[project.urls]
documentation = "https://ioos.github.io/erddapy"
homepage = "https://github.com/ioos/erddapy"
repository = "https://github.com/ioos/erddapy"

[tool.setuptools]
packages = ["erddapy"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "erddapy/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "F", # flakes
    "I", # import sorting
    "T20", # flake8-print
    "UP", # upgrade
]
target-version = "py38"
line-length = 79

[tool.ruff.per-file-ignores]
"docs/source/conf.py" = [
  "E402",
  "A001",
]

[tool.pytest.ini_options]
markers = [
    "web: marks tests require connection (deselect with '-m \"not web\"')",
    "serial: marks tests that cannot be run in parallel (deselect with '-m \"not serial\"')",
]
filterwarnings = [
    "error:::erddapy.*",
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
]

[tool.check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "Makefile",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 85
exclude = ["docs", "tests"]
verbose = 1
quiet = false
color = true
