[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "erddapy"
description = "Python interface for ERDDAP"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Alex Kerney", email = "akerney@gmri.org" },
  { name = "Callum Rollo", email = "c.rollo@outlook.com" },
  { name = "Filipe Fernandes", email = "ocefpaf+erddapy@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://ioos.github.io/erddapy"
urls.homepage = "https://github.com/ioos/erddapy"
urls.repository = "https://github.com/ioos/erddapy"

[tool.setuptools]
packages = [
  "erddapy",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
write_to = "erddapy/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest.ini_options]
markers = [
  "web: marks tests require connection (deselect with '-m \"not web\"')",
  "serial: marks tests that cannot be run in parallel (deselect with '-m \"not serial\"')",
]
filterwarnings = [
  "error:::erddapy.*",
  "ignore::UserWarning",
  "ignore::RuntimeWarning",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 85
exclude = [
  "docs",
  "tests",
]
verbose = 1
quiet = false
color = true
