[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "erddapy"
description = "Python interface for ERDDAP"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Alex Kerney", email = "akerney@gmri.org" },
  { name = "Callum Rollo", email = "c.rollo@outlook.com" },
  { name = "Filipe Fernandes", email = "ocefpaf+erddapy@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://ioos.github.io/erddapy"
urls.homepage = "https://github.com/ioos/erddapy"
urls.repository = "https://github.com/ioos/erddapy"
entry-points."xarray.backends".erddapy = "erddapy.xarray_erddap:ERDDAPyBackendEntrypoint"

[tool.setuptools]
packages = [
  "erddapy",
]
include-package-data = true
dynamic.dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
write_to = "erddapy/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.interrogate]
fail-under = 85
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
exclude = [
  "docs",
  "tests",
]
color = true
verbose = 1
quiet = false

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "docs",
  "docs/*",
  "Makefile",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest]
ini_options.markers = [
  "serial: marks tests that cannot be run in parallel (deselect with '-m \"not serial\"')",
  "web: marks tests require connection (deselect with '-m \"not web\"')",
]
ini_options.filterwarnings = [
  "error:::erddapy.*",
  "ignore::RuntimeWarning",
  "ignore::UserWarning",
]
