# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = erddapy/_version.py
versionfile_build = erddapy/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    versioneer.py ALL
    erddapy/_version.py ALL

[metadata]
description-file = README.md
license_file = LICENSE.txt

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party=attr

[check-manifest]
ignore = 
    .travis.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*
