[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    erddapy/_version.py ALL

[metadata]
name = erddapy
description = Python interface for ERDDAP
author = Filipe Fernandes
author_email = ocefpaf@gmail.com
url = https://github.com/ioos/erddapy
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = True
install_requires = 
    pandas >=0.20.3
    requests
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[sdist]
formats = gztar

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party=attr

[check-manifest]
ignore = 
    *.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*
