[metadata]
name = erddapy
description = Python interface for ERDDAP
author = Filipe Fernandes
author_email = ocefpaf@gmail.com
url = https://github.com/ioos/erddapy
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_file = LICENSE.txt
project_urls =
    Documentation = https://ioos.github.io/erddapy
    Bug Tracker = https://github.com/ioos/erddapy/issues
    Source Code = https://github.com/ioos/erddapy
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = True
include_package_data = True
install_requires =
    pandas >=1
    requests
python_requires = >=3.7
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[tool:pytest]
markers =
    web: marks tests require connection (deselect with '-m "not web"')
    serial: marks tests that cannot be run in parallel (deselect with '-m "not serial"')
